@@ -33,6 +33,10 @@ import project.lms_rikkei_edu.modules.course.repository.CourseRepository;
 import project.lms_rikkei_edu.modules.course.repository.LessonProgressRepository;
 import project.lms_rikkei_edu.modules.course.repository.LessonRepository;
 import project.lms_rikkei_edu.modules.course.service.StudentCourseService;
+import project.lms_rikkei_edu.modules.quiz.entity.QuizAttemptEntity;
+import project.lms_rikkei_edu.modules.quiz.repository.ProctoringViolationLogRepository;
+import project.lms_rikkei_edu.modules.quiz.repository.QuizAttemptAnswerRepository;
+import project.lms_rikkei_edu.modules.quiz.repository.QuizAttemptRepository;
 import project.lms_rikkei_edu.modules.user.entity.UserEntity;
 import project.lms_rikkei_edu.modules.user.repository.UserRepository;
 import software.amazon.awssdk.services.s3.presigner.model.PresignedGetObjectRequest;
@@ -60,9 +64,17 @@ public class StudentCourseServiceImpl implements StudentCourseService {
     private final CourseMapper courseMapper;
     private final S3Service s3Service;
     private final UserRepository userRepository;
+    private final QuizAttemptRepository quizAttemptRepository;
+    private final QuizAttemptAnswerRepository quizAttemptAnswerRepository;
+    private final ProctoringViolationLogRepository proctoringViolationLogRepository;
+
+
 
     @Value("${app.s3.presigned-url-expiry:3600}")
     private long presignedUrlExpiry;
+
+    private static final String STATUS_COMPLETED = "COMPLETED";
+    private static final String STATUS_IN_PROGRESS = "IN_PROGRESS";
 
     @PersistenceContext
     private EntityManager entityManager;
@@ -96,59 +108,63 @@ public class StudentCourseServiceImpl implements StudentCourseService {
         // Batch fetch progress
         Map<UUID, CourseProgressEntity> progressMap = courseProgressRepository
                 .findByStudentIdAndCourseIdIn(studentId,
-                        courses.stream().map(Course::getId).collect(Collectors.toList()))
+                        courses.stream().map(Course::getId).toList())
                 .stream().collect(Collectors.toMap(CourseProgressEntity::getCourseId, p -> p));
 
-        return courses.stream().map(c -> {
-            String categoryName = c.getCategory() != null ? c.getCategory().getName() : "";
-            String instructorName = instructorNames.getOrDefault(c.getInstructorId(), "");
-            CourseProgressEntity prog = progressMap.get(c.getId());
+        return courses.stream().map(c -> toEnrolledCourseResponse(c, instructorNames, progressMap)).toList();
+    }
 
-            int chaptersCount = c.getChapters() != null ? c.getChapters().size() : 0;
-            int lessonsCount = 0;
-            int totalHours = 0;
-            if (c.getChapters() != null) {
-                for (Chapter ch : c.getChapters()) {
-                    if (ch.getLessons() != null) {
-                        lessonsCount += ch.getLessons().size();
-                        for (Lesson l : ch.getLessons()) {
-                            if (l.getDurationSeconds() != null) {
-                                totalHours += l.getDurationSeconds();
-                            }
+    private StudentCourseResponse toEnrolledCourseResponse(Course c, Map<UUID, String> instructorNames,
+                                                            Map<UUID, CourseProgressEntity> progressMap) {
+        String instructorName = instructorNames.getOrDefault(c.getInstructorId(), "");
+        CourseProgressEntity prog = progressMap.get(c.getId());
+        int chaptersCount = c.getChapters() != null ? c.getChapters().size() : 0;
+        int[] stats = computeLessonStats(c);
+        int totalHours = (int) Math.ceil(stats[1] / 3600.0);
+
+        String sStatus;
+        int progress;
+        if (prog == null) {
+            sStatus = "new";
+            progress = 0;
+        } else {
+            progress = prog.getOverallPercentage() != null ? prog.getOverallPercentage().intValue() : 0;
+            sStatus = STATUS_COMPLETED.equals(prog.getStatus()) ? "done" : "learning";
+        }
+
+        return StudentCourseResponse.builder()
+                .id(c.getId())
+                .title(c.getTitle())
+                .thumbnailUrl(c.getThumbnailUrl())
+                .category(c.getCategory() != null ? c.getCategory().getName() : "")
+                .instructor(instructorName)
+                .lessons(stats[0])
+                .hours(totalHours)
+                .level(c.getLevel() != null ? c.getLevel().name() : "")
+                .rating(0)
+                .progress(progress)
+                .sStatus(sStatus)
+                .pubStatus(c.getStatus() != null ? c.getStatus().name().toLowerCase() : "draft")
+                .chapters(chaptersCount)
+                .build();
+    }
+
+    private int[] computeLessonStats(Course c) {
+        int lessonsCount = 0;
+        int totalSeconds = 0;
+        if (c.getChapters() != null) {
+            for (Chapter ch : c.getChapters()) {
+                if (ch.getLessons() != null) {
+                    lessonsCount += ch.getLessons().size();
+                    for (Lesson l : ch.getLessons()) {
+                        if (l.getDurationSeconds() != null) {
+                            totalSeconds += l.getDurationSeconds();
                         }
                     }
                 }
             }
-            totalHours = (int) Math.ceil(totalHours / 3600.0);
-
-            int progress = 0;
-            String sStatus;
-            if (prog == null) {
-                sStatus = "new";
-            } else {
-                progress = prog.getOverallPercentage() != null
-                        ? prog.getOverallPercentage().intValue() : 0;
-                sStatus = "COMPLETED".equals(prog.getStatus()) ? "done" : "learning";
-            }
-
-            String pubStatus = c.getStatus() != null ? c.getStatus().name().toLowerCase() : "draft";
-
-            return StudentCourseResponse.builder()
-                    .id(c.getId())
-                    .title(c.getTitle())
-                    .thumbnailUrl(c.getThumbnailUrl())
-                    .category(categoryName)
-                    .instructor(instructorName)
-                    .lessons(lessonsCount)
-                    .hours(totalHours)
-                    .level(c.getLevel() != null ? c.getLevel().name() : "")
-                    .rating(0)
-                    .progress(progress)
-                    .sStatus(sStatus)
-                    .pubStatus(pubStatus)
-                    .chapters(chaptersCount)
-                    .build();
-        }).toList();
+        }
+        return new int[]{lessonsCount, totalSeconds};
     }
 
     @Override
@@ -178,32 +194,7 @@ public class StudentCourseServiceImpl implements StudentCourseService {
         // lọc ở đây vì nội dung đó vẫn đang live cho tới khi admin duyệt xóa thật.
         filterToLiveContentOnly(response);
 
-        // Attach lesson progress + lessonPercentage
-        List<LessonProgressEntity> lessonProgressList = lessonProgressRepository
-                .findByStudentIdAndCourseId(studentId, courseId);
-        Map<UUID, String> progressMap = lessonProgressList.stream()
-                .collect(Collectors.toMap(LessonProgressEntity::getLessonId, LessonProgressEntity::getStatus));
-        Map<UUID, BigDecimal> lessonPctMap = lessonProgressList.stream()
-                .filter(e -> e.getLessonPercentage() != null)
-                .collect(Collectors.toMap(LessonProgressEntity::getLessonId, LessonProgressEntity::getLessonPercentage));
-
-        if (response.getChapters() != null) {
-            for (var ch : response.getChapters()) {
-                if (ch.getLessons() != null) {
-                    for (var lesson : ch.getLessons()) {
-                        String p = progressMap.get(lesson.getId());
-                        if (p != null) {
-                            lesson.setProgress(p);
-                        }
-                        BigDecimal lp = lessonPctMap.get(lesson.getId());
-                        if (lp != null) {
-                            lesson.setProgressPercentage(lp.intValue());
-                        }
-                    }
-                }
-            }
-        }
-
+        attachLessonProgress(studentId, courseId, response);
         return response;
     }
 
@@ -227,6 +218,29 @@ public class StudentCourseServiceImpl implements StudentCourseService {
                 .url(presigned.url().toString())
                 .expiresAt(Instant.now().plusSeconds(presignedUrlExpiry))
                 .build();
+    }
+
+    private void attachLessonProgress(UUID studentId, UUID courseId, CourseDetailResponse response) {
+        List<LessonProgressEntity> lessonProgressList = lessonProgressRepository
+                .findByStudentIdAndCourseId(studentId, courseId);
+        Map<UUID, String> progressMap = lessonProgressList.stream()
+                .collect(Collectors.toMap(LessonProgressEntity::getLessonId, LessonProgressEntity::getStatus));
+        Map<UUID, BigDecimal> lessonPctMap = lessonProgressList.stream()
+                .filter(e -> e.getLessonPercentage() != null)
+                .collect(Collectors.toMap(LessonProgressEntity::getLessonId, LessonProgressEntity::getLessonPercentage));
+
+        if (response.getChapters() != null) {
+            for (var ch : response.getChapters()) {
+                if (ch.getLessons() != null) {
+                    for (var lesson : ch.getLessons()) {
+                        String p = progressMap.get(lesson.getId());
+                        if (p != null) lesson.setProgress(p);
+                        BigDecimal lp = lessonPctMap.get(lesson.getId());
+                        if (lp != null) lesson.setProgressPercentage(lp.intValue());
+                    }
+                }
+            }
+        }
     }
 
     @Override
@@ -269,19 +283,9 @@ public class StudentCourseServiceImpl implements StudentCourseService {
                 });
 
         // Update incoming data
-        if (request.getWatchedPercentage() != null) {
-            progress.setWatchedPercentage(request.getWatchedPercentage());
-        }
-        if (request.getLastPlaybackPosition() != null) {
-            progress.setLastPlaybackPosition(request.getLastPlaybackPosition());
-        }
-        if (request.getDocumentViewSeconds() != null) {
-            // Accumulate — always take the highest value sent
-            int existing = progress.getDocumentViewSeconds() != null ? progress.getDocumentViewSeconds() : 0;
-            if (request.getDocumentViewSeconds() > existing) {
-                progress.setDocumentViewSeconds(request.getDocumentViewSeconds());
-            }
-        }
+        applyWatchedPercentage(progress, request);
+        applyLastPlaybackPosition(progress, request);
+        applyDocumentViewSeconds(progress, request);
         progress.setLastAccessedAt(Instant.now());
 
         // Determine lesson content type
@@ -291,30 +295,9 @@ public class StudentCourseServiceImpl implements StudentCourseService {
         int wp = progress.getWatchedPercentage() != null ? progress.getWatchedPercentage().intValue() : 0;
         int dv = progress.getDocumentViewSeconds() != null ? progress.getDocumentViewSeconds() : 0;
 
-        // Auto-determine completion based on content type
-        boolean completed = false;
-        if (hasVideo) {
-            completed = wp >= 90;
-        } else if (hasDocument) {
-            completed = dv >= 20;
-        } else {
-            // No video or document — complete on first access
-            completed = progress.getStatus() == null || "COMPLETED".equals(progress.getStatus());
-        }
+        boolean completed = determineCompleted(request, progress, hasVideo, hasDocument, wp, dv);
 
-        if (completed || "COMPLETED".equals(progress.getStatus())) {
-            progress.setStatus("COMPLETED");
-            if (progress.getCompletedAt() == null) {
-                progress.setCompletedAt(Instant.now());
-            }
-        } else {
-            boolean started = wp > 0 || dv > 0;
-            if (started && !"COMPLETED".equals(progress.getStatus())) {
-                progress.setStatus("IN_PROGRESS");
-            } else if (progress.getStatus() == null) {
-                progress.setStatus("IN_PROGRESS");
-            }
-        }
+        applyProgressStatus(progress, completed, wp, dv);
 
         // Calculate lesson percentage
         progress.setLessonPercentage(calculateLessonPercentage(wp, dv, hasVideo, hasDocument));
@@ -323,6 +306,37 @@ public class StudentCourseServiceImpl implements StudentCourseService {
 
         // Always update course-level progress
         updateCourseProgress(studentId, courseId);
+    }
+
+    private boolean determineCompleted(UpdateProgressRequest request, LessonProgressEntity progress,
+                                        boolean hasVideo, boolean hasDocument, int wp, int dv) {
+        if (Boolean.TRUE.equals(request.getCompleted())) {
+            return true;
+        }
+        if (request.getCompleted() != null) {
+            return request.getCompleted();
+        }
+        if (hasVideo && hasDocument) {
+            return wp >= 90 && dv >= 10;
+        }
+        if (hasVideo) {
+            return wp >= 90;
+        }
+        if (hasDocument) {
+            return dv >= 20 || wp >= 90;
+        }
+        return progress.getStatus() == null || STATUS_COMPLETED.equals(progress.getStatus());
+    }
+
+    private void applyProgressStatus(LessonProgressEntity progress, boolean completed, int wp, int dv) {
+        if (completed || STATUS_COMPLETED.equals(progress.getStatus())) {
+            progress.setStatus(STATUS_COMPLETED);
+            if (progress.getCompletedAt() == null) {
+                progress.setCompletedAt(Instant.now());
+            }
+        } else if (progress.getStatus() == null || wp > 0 || dv > 0) {
+            progress.setStatus(STATUS_IN_PROGRESS);
+        }
     }
 
     /**
@@ -348,7 +362,7 @@ public class StudentCourseServiceImpl implements StudentCourseService {
                     return newProgress;
                 });
 
-        progress.setStatus("COMPLETED");
+        progress.setStatus(STATUS_COMPLETED);
         if (progress.getCompletedAt() == null) {
             progress.setCompletedAt(Instant.now());
         }
@@ -363,7 +377,7 @@ public class StudentCourseServiceImpl implements StudentCourseService {
     @Transactional
     public void resetLessonProgressForInProgressStudents(UUID courseId, UUID lessonId) {
         List<UUID> inProgressStudentIds = courseProgressRepository.findByCourseId(courseId).stream()
-                .filter(cp -> !"COMPLETED".equals(cp.getStatus()))
+                .filter(cp -> !STATUS_COMPLETED.equals(cp.getStatus()))
                 .map(CourseProgressEntity::getStudentId)
                 .toList();
 
@@ -374,16 +388,77 @@ public class StudentCourseServiceImpl implements StudentCourseService {
         }
     }
 
+    @Override
+    @Transactional
+    public void resetProgressForStudents(UUID courseId, List<UUID> studentIds) {
+        deleteProgressData(courseId, studentIds);
+    }
+
+    @Override
+    @Transactional
+    public void resetStudentCourseProgress(UUID courseId, UUID studentId) {
+        if (courseId == null || studentId == null) return;
+        deleteProgressData(courseId, List.of(studentId));
+    }
+
+    private void deleteProgressData(UUID courseId, List<UUID> studentIds) {
+        if (courseId == null || studentIds == null || studentIds.isEmpty()) return;
+        try {
+            List<QuizAttemptEntity> attempts = quizAttemptRepository.findByCourseIdAndStudentIdIn(courseId, studentIds);
+            if (!attempts.isEmpty()) {
+                List<UUID> attemptIds = attempts.stream().map(QuizAttemptEntity::getId).toList();
+                quizAttemptAnswerRepository.deleteByAttemptIdIn(attemptIds);
+                proctoringViolationLogRepository.deleteByAttemptIdIn(attemptIds);
+                quizAttemptRepository.deleteByCourseIdAndStudentIdIn(courseId, studentIds);
+            }
+            lessonProgressRepository.deleteByCourseIdAndStudentIdIn(courseId, studentIds);
+            courseProgressRepository.deleteByCourseIdAndStudentIdIn(courseId, studentIds);
+            log.info("Reset progress successfully for {} students in course {}", studentIds.size(), courseId);
+        } catch (Exception e) {
+            log.error("Failed to reset progress for students in course {}: {}", courseId, e.getMessage(), e);
+        }
+    }
+
+    private void applyWatchedPercentage(LessonProgressEntity progress, UpdateProgressRequest request) {
+        if (request.getWatchedPercentage() == null) return;
+        int existing = progress.getWatchedPercentage() != null ? progress.getWatchedPercentage().intValue() : 0;
+        if (request.getWatchedPercentage().intValue() > existing) {
+            progress.setWatchedPercentage(request.getWatchedPercentage());
+        }
+    }
+
+    private void applyLastPlaybackPosition(LessonProgressEntity progress, UpdateProgressRequest request) {
+        if (request.getLastPlaybackPosition() == null) return;
+        int existing = progress.getLastPlaybackPosition() != null ? progress.getLastPlaybackPosition() : 0;
+        if (request.getLastPlaybackPosition() > existing) {
+            progress.setLastPlaybackPosition(request.getLastPlaybackPosition());
+        }
+    }
+
+    private void applyDocumentViewSeconds(LessonProgressEntity progress, UpdateProgressRequest request) {
+        if (request.getDocumentViewSeconds() == null) return;
+        int existing = progress.getDocumentViewSeconds() != null ? progress.getDocumentViewSeconds() : 0;
+        if (request.getDocumentViewSeconds() > existing) {
+            progress.setDocumentViewSeconds(request.getDocumentViewSeconds());
+        }
+    }
+
     /* ── Private helpers ─────────────────────────────────── */
 
     private BigDecimal calculateLessonPercentage(int wp, int dv, boolean hasVideo, boolean hasDocument) {
-        if (hasVideo) {
-            return BigDecimal.valueOf(Math.min(wp, 100));
+        if (hasVideo && hasDocument) {
+            if (wp >= 90 && dv >= 10) return BigDecimal.valueOf(100);
+            double vidScore = Math.clamp(wp / 90.0, 0, 1) * 80.0;
+            double docScore = Math.clamp(dv / 10.0, 0, 1) * 20.0;
+            return BigDecimal.valueOf(Math.round(vidScore + docScore));
+        } else if (hasVideo) {
+            return BigDecimal.valueOf(Math.clamp(wp, 0, 100));
         } else if (hasDocument) {
-            double pct = Math.min(dv * 100.0 / 20, 100);
-            return BigDecimal.valueOf(Math.round(pct));
+            if (dv >= 20 || wp >= 90) return BigDecimal.valueOf(100);
+            double pctByTime = Math.clamp(dv * 100.0 / 20.0, 0, 100);
+            double finalPct = Math.max(pctByTime, Math.clamp(wp, 0, 100));
+            return BigDecimal.valueOf(Math.round(finalPct));
         } else {
-            // No video or document — immediate 100%
             return BigDecimal.valueOf(100);
         }
     }
@@ -413,18 +488,20 @@ public class StudentCourseServiceImpl implements StudentCourseService {
     }
 
     private boolean hasVideoContent(Lesson lesson) {
-        if (lesson.getHlsManifestUrl() != null) return true;
+        if (lesson.getType() == LessonType.VIDEO) return true;
+        if (lesson.getHlsManifestUrl() != null || lesson.getVideoS3Key() != null) return true;
         if (lesson.getResources() != null) {
             return lesson.getResources().stream()
-                    .anyMatch(r -> r.getResourceType() == ResourceType.VIDEO);
+                    .anyMatch(r -> r.getResourceType() == ResourceType.VIDEO && !Boolean.TRUE.equals(r.getPendingDelete()));
         }
         return false;
     }
 
     private boolean hasDocumentContent(Lesson lesson) {
+        if (lesson.getType() != null && lesson.getType() != LessonType.VIDEO && lesson.getType() != LessonType.QUIZ) return true;
         if (lesson.getResources() != null) {
             return lesson.getResources().stream()
-                    .anyMatch(r -> r.getResourceType() != ResourceType.VIDEO);
+                    .anyMatch(r -> r.getResourceType() != ResourceType.VIDEO && !Boolean.TRUE.equals(r.getPendingDelete()));
         }
         return false;
     }
@@ -435,7 +512,7 @@ public class StudentCourseServiceImpl implements StudentCourseService {
                 .findByStudentIdAndCourseId(studentId, courseId);
 
         long completedCount = allProgress.stream()
-                .filter(p -> "COMPLETED".equals(p.getStatus()))
+                .filter(p -> STATUS_COMPLETED.equals(p.getStatus()))
                 .count();
 
         double avgPercentage = 0;
@@ -453,7 +530,7 @@ public class StudentCourseServiceImpl implements StudentCourseService {
                     newProg.setTotalLessonsCount(totalLessons);
                     newProg.setCompletedLessonsCount(0);
                     newProg.setOverallPercentage(BigDecimal.ZERO);
-                    newProg.setStatus("IN_PROGRESS");
+                    newProg.setStatus(STATUS_IN_PROGRESS);
                     return newProg;
                 });
 
@@ -463,9 +540,9 @@ public class StudentCourseServiceImpl implements StudentCourseService {
         courseProgress.setUpdatedAt(Instant.now());
 
         if (completedCount >= totalLessons && totalLessons > 0) {
-            courseProgress.setStatus("COMPLETED");
+            courseProgress.setStatus(STATUS_COMPLETED);
         } else {
-            courseProgress.setStatus("IN_PROGRESS");
+            courseProgress.setStatus(STATUS_IN_PROGRESS);
         }
 
         courseProgressRepository.save(courseProgress);
